[tool.poetry]
name = "pfutils"
version = "0.1.0"
description = "Various utilities to make playing Pathfinder 1e easier"
authors = ["Braxton Schafer <braxton@cmdcentral.xyz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
pypandoc = "^1.5"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
